--- a/01b02 Single-Cell Data and RNA Velocity.ipynb
+++ b/01b02 Single-Cell Data and RNA Velocity.ipynb
@@ -20,6 +20,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "RNA velocity is a high-dimensional vector that predicts the future state of individual cells on a timescale of hours. Authors of RNA Velocity expect it to greatly aid the analysis of developmental lineages and cellular dynamics, particularly in humans.\n",
+    "\n",
+    "In this notebook, we have single-cell datasets with RNA velocity information. Functions return 2 $n \\times d$ torch tensors and a list. The first tensor contains information of $n$ cells with $d$ features and the second tensor holds the vectors associated with the aforementioned $n$ cells in the same $d$ directions. The list contains the ground truth cell type labels of each of the $n$ cells."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Pancreas Dataset"
    ]
   },
@@ -101,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -124,14 +133,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    finished (0:00:14) --> added \n",
+      "    finished (0:00:18) --> added \n",
       "    'distances' and 'connectivities', weighted adjacency matrices (adata.obsp)\n",
       "computing moments based on connectivities\n",
-      "    finished (0:00:08) --> added \n",
+      "    finished (0:00:10) --> added \n",
       "    'Ms' and 'Mu', moments of un/spliced abundances (adata.layers)\n",
-      "computing velocities\n",
-      "    finished (0:00:23) --> added \n",
-      "    'velocity', velocity vectors for each individual cell (adata.layers)\n"
+      "computing velocities\n"
      ]
     }
    ],
@@ -143,40 +150,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Normalized count data: X, spliced, unspliced.\n",
-      "Logarithmized X.\n",
-      "computing neighbors\n",
-      "    finished (0:00:01) --> added \n",
-      "    'distances' and 'connectivities', weighted adjacency matrices (adata.obsp)\n",
-      "computing moments based on connectivities\n",
-      "    finished (0:00:08) --> added \n",
-      "    'Ms' and 'Mu', moments of un/spliced abundances (adata.layers)\n",
-      "computing velocities\n",
-      "    finished (0:00:23) --> added \n",
-      "    'velocity', velocity vectors for each individual cell (adata.layers)\n",
-      "computing velocity graph (using 1/8 cores)\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3f55e75d0d55494fa3007ee581e03c51",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/3696 [00:00<?, ?cells/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "X2, flows2, labels2 = pancreas_rnavelo_50pcs()"
    ]
@@ -201,16 +175,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "!nbdev_build_lib"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!nbdev_build_lib"
+   ]
   }
  ],
  "metadata": {
