--- a/01b02 Single-Cell Data and RNA Velocity.ipynb
+++ b/01b02 Single-Cell Data and RNA Velocity.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# RNA Velocity Data"
+    "# 01b02 RNA Velocity Data"
    ]
   },
   {
