--- a/01b02 Single-Cell Data and RNA Velocity.ipynb
+++ b/01b02 Single-Cell Data and RNA Velocity.ipynb
@@ -15,7 +15,8 @@
    "source": [
     "# default_exp datasets\n",
     "\n",
-    "!nbdev_build_lib"
+    "!nbdev_build_lib\n",
+    "!nbdev_buid_docs"
    ]
   },
   {
