Displayed galary fo scvelo data

--- a/01b02 Single-Cell Data and RNA Velocity.ipynb
+++ b/01b02 Single-Cell Data and RNA Velocity.ipynb
@@ -120,10 +120,10 @@
     "    \n",
     "    return X, flows, labels, n_pcs\n",
     "\n",
-    "def rnavelo_plot_pca(adata):\n",
+    "def rnavelo_plot_pca(adata, ax=None, show=True):\n",
     "    rnavelo_pcs(adata)\n",
     "    cluster_key = rnavelo_find_cluster_key(adata)\n",
-    "    scv.pl.velocity_embedding_stream(adata, basis='pca', color=cluster_key)"
+    "    scv.pl.velocity_embedding_stream(adata, basis='pca', color=cluster_key, ax=ax, show=show)"
    ]
   },
   {
