--- a/01b02 Single-Cell Data and RNA Velocity.ipynb
+++ b/01b02 Single-Cell Data and RNA Velocity.ipynb
@@ -447,11 +447,16 @@
    "source": [
     "rnavelo_plot_pca(adata)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('sumry-directed-graphs')",
+   "display_name": "Python 3.9.13 ('pyg_from_source')",
    "language": "python",
    "name": "python3"
   }
